--- a/styles/left.css
+++ b/styles/left.css
@@ -10,6 +10,11 @@
     margin-left: 8px;
 }
 
+#placeholder-scripts {
+    color: #ffffff27;
+    margin-top: 150px;
+}
+
 .icon-buttons {
     background-color: transparent;
     width: 80px;
@@ -27,6 +32,7 @@
     padding: 20px;
     outline: none;
     border: none;
+    cursor: pointer;
 }
 
 .icon-buttons img {
@@ -46,8 +52,9 @@
     padding-right: 11px;
 }
 
-.script button {
+#new-folder {
     margin-top: 20px;
+    margin-bottom: 26px;
     display: flex;
     align-items: center;
     border-radius: 7px;
@@ -63,8 +70,79 @@
     cursor: pointer;
 }
 
+#folder {
+    margin-top: 7px;
+    display: flex;
+    align-items: center;
+    font-weight: 300;
+    font-size: 10px;
+    border-radius: 7px;
+    outline: none;
+    border: none;
+    width: 98%;
+    height: 30px;
+    color: #ffffff88;
+    background: transparent;
+    padding: 15px;
+    padding-left: 4px;
+    padding-right: 11px;
+    cursor: pointer;
+    transition: 0.3 ease
+}
+
+#file {
+    margin-top: 7px;
+    display: flex;
+    align-items: center;
+    font-weight: 300;
+    font-size: 10px;
+    border-radius: 7px;
+    outline: none;
+    border: none;
+    width: 98%;
+    height: 30px;
+    color: #ffffff88;
+    background: transparent;
+    padding: 15px;
+    padding-left: 11px;
+    padding-right: 11px;
+    cursor: pointer;
+    transition: 0.3 ease
+}
+
+#file:hover {
+    background: linear-gradient(to bottom, #2c2c31 25%, #212124 100%);
+}
+
+#folder:hover {
+    background: linear-gradient(to bottom, #2c2c31 25%, #212124 100%);
+}
+
+.script {
+    overflow: hidden;
+}
+
+.line {
+    border-left: 1px solid #ffffff50;
+    left: 0;
+    top: 0;
+    bottom: 0;
+}
+
+#dirwrapper {
+    margin: 0;
+    padding: 0;
+    width: 110%;
+    height: 390px;
+    overflow-y: auto;
+}
+
 .script svg {
     width: 20px;
+}
+
+.script button:not(#new-folder) svg {
+    margin-right: 10px;
 }
 
 .script button p {
@@ -107,9 +185,7 @@
 .news-item {
     background: linear-gradient(to bottom, #1d1d20 25%, #19191b 100%);
     width: 88%;
-    min-height: 70px;
-    max-height: 150px;
-    height: fit-content;
+    height: 70px;
     border-radius: 6px;
     margin-bottom: 7px;
     padding: 10px;
@@ -251,6 +327,15 @@
     display: none;
 }
 
+.script::-webkit-scrollbar{
+    width: 10px;
+    height: 4px;
+}
+
+.script::-webkit-scrollbar-track {
+    background: transparent;
+}
+
 #editor-container, #settings-container {
     display: none;
 }
@@ -259,38 +344,6 @@
     margin-top: 20px;
 }
 
-.console-container {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.console-tab{
-    color: white;
-    font-size: 13px;
-    width: 80px;
-    text-align: center;
-    border-top-right-radius: 12px;
-    border-top-left-radius: 12px;
-    padding: 0 6px;
-    outline: none;
-    border: none;
-    background-color: var(--highlight2);
-    cursor: pointer;
-}
-
-.console {
-    font-size: 10px;
-    padding-left: 12px;
-    margin-top: -10px;
-    background-color: var(--highlight2);
-}
-
-.console p {
-    font-size: 10px;
-    padding-top: 20px;
-    padding-bottom: 48px;
-}
 .settings button {
     margin-top: 7px;
     display: flex;
