--- a/styles/left.css
+++ b/styles/left.css
@@ -235,7 +235,7 @@
 }
 
 .welcome-header {
-    background-image: url('../assets/background.png');
+    background-image: url('./assets/background.png');
     background-size: cover;
     background-position: center;
     width: 660px;
