--- a/styles/root.css
+++ b/styles/root.css
@@ -1,20 +1,20 @@
 @font-face {
     font-family: 'Kontotra';
-    src: url('./fonts/Kontora-Black.otf') format('opentype');
+    src: url('../fonts/Kontora-Black.otf') format('opentype');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Kontotra';
-    src: url('./fonts/Kontora-SemiBold.otf') format('opentype');
+    src: url('../fonts/Kontora-SemiBold.otf') format('opentype');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Kontotra';
-    src: url('./fonts/Kontotra-Medium.otf') format('opentype');
+    src: url('../fonts/Kontotra-Medium.otf') format('opentype');
     font-weight: 200;
     font-style: normal;
 }
